# bandcamp-flac-get

./: ..gitignore.kate-swp  .gitignore  LINUX_SETUP.sh  LINUX_START_DOWNLOADING.sh  README.md  SETUP.sh  START_DOWNLOADING.sh  album_links.txt  bandcamp_flac_get.py  bcfg-album2mkv.sh  bcfg-common.sh  get-albums-by-artist.sh  install_linux.sh  main.py  requirements.txt  setup.cfg  windowsSetup.ps1
bcfg/: __main__.py  cli.py  constants.py  context_scraper.py  gui.py  settings.py  settings_default.py
bcfg/gui/: configdialog.py
shaen_logger/: __init__.py
src/: album_links.txt  cli.py  main.py
src/bcfg/: __init__.py  __main__.py  context_scraper.py  settings.py  settings_example.py  xpaths.py
src/shaen_logger/: log.py
utils/: activate.cmd  bcfg-album2mkv.sh  bcfg-artist2discog.sh  bcfg-common.sh  bcfg-download_path.txt  deactivate.cmd
